--- a/ParkingSpot.Application/ParkingSpot.Application.csproj
+++ b/ParkingSpot.Application/ParkingSpot.Application.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Scrutor" Version="4.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ParkingSpot.Core\ParkingSpot.Core.csproj" />
   </ItemGroup>
 
